--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -5452,7 +5452,8 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
 /**
  * Text formatting alignment
  */
-.AlignLeft, .bbcode_left {
+.AlignLeft {
+  float: left;
   margin: 0 10px 10px 0;
   text-align: left;
 }
@@ -5463,8 +5464,17 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   text-align: center;
 }
 
-.AlignRight, .bbcode_right {
+.AlignRight {
+  float: right;
   margin: 0 0 10px 10px;
+  text-align: right;
+}
+
+.bbcode_left {
+  text-align: left;
+}
+
+.bbcode_right {
   text-align: right;
 }
 
