Added clearfix for messages container. Keep in mind there are some minor changes to colours, due to a sass version update

--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -2196,6 +2196,12 @@ body.Post .Popup a.Close {
   margin-top: 5px;
 }
 
+.Message:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .Message h1, .Message h2, .Message h3, .Message p, .Message .P {
   margin: 10px 0;
 }
