--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -2169,6 +2169,12 @@ body.Post .Popup a.Close {
   font-size: 100%;
   word-wrap: break-word;
   margin-top: 5px;
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 .Message h1, .Message h2, .Message h3, .Message p, .Message .P {
