Added missing BB Code classes to editor plugin

--- a/plugins/editor/scss/wysiwyg.scss
+++ b/plugins/editor/scss/wysiwyg.scss
@@ -300,14 +300,17 @@ div.Quote {
   overflow-y: auto;
 }
 
+.bbcode_left,
 .AlignLeft {
   text-align: left;
 }
 
+.bbcode_center,
 .AlignCenter {
   text-align: center;
 }
 
+.bbcode_right,
 .AlignRight {
   text-align: right;
 }
