--- a/plugins/editor/design/editor.css
+++ b/plugins/editor/design/editor.css
@@ -882,12 +882,15 @@ div.Quote {
   min-width: 200px;
   overflow-y: auto; }
 
+.bbcode_left,
 .AlignLeft {
   text-align: left; }
 
+.bbcode_center,
 .AlignCenter {
   text-align: center; }
 
+.bbcode_right,
 .AlignRight {
   text-align: right; }
 
