Removed reset on outlines for :focus elements

--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -20,7 +20,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 
 /* remember to define focus styles! */
 :focus {
-  outline: 0;
+  outline-style: auto;
 }
 
 body {
