--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -31,7 +31,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 
 /* remember to define focus styles! */
 :focus {
-  outline: 0;
+  outline-style: auto;
 }
 
 body {
