--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -5230,6 +5230,17 @@ input + .ReactSprite {
   border: 0;
 }
 
+.sr-only-important {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  border: 0 !important;
+}
+
 /* Token input */
 ul.token-input-list {
   -webkit-box-sizing: border-box;
