Added new classes to have more control over .input-wrap-multiple Updated docs Note that update to grunt have modified a few other files

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -5147,7 +5147,7 @@ output {
 }
 
 .alert-success .alert-link, .CasualMessage .alert-link {
-  color: #e6e5e5;
+  color: #e6e6e6;
 }
 
 .alert-info, .InfoMessage {
@@ -5161,7 +5161,7 @@ output {
 }
 
 .alert-info .alert-link, .InfoMessage .alert-link {
-  color: #e6e5e5;
+  color: #e6e6e6;
 }
 
 .alert-warning, .WarningMessage, .AlertMessage {
@@ -5175,7 +5175,7 @@ output {
 }
 
 .alert-warning .alert-link, .WarningMessage .alert-link, .AlertMessage .alert-link {
-  color: #e6e5e5;
+  color: #e6e6e6;
 }
 
 .alert-danger, div.Messages.Errors {
@@ -5189,7 +5189,7 @@ output {
 }
 
 .alert-danger .alert-link, div.Messages.Errors .alert-link {
-  color: #e6e5e5;
+  color: #e6e6e6;
 }
 
 .toolbar-stats {
@@ -6921,6 +6921,22 @@ label,
 
 .input-wrap-multiple > *:not(:first-child) {
   margin-left: 0.5625rem;
+}
+
+.input-wrap-multiple.input-wrap-1_3 > * {
+  width: 66.6666666667%;
+}
+
+.input-wrap-multiple.input-wrap-1_3 > *:first-child {
+  width: 33.3333333333%;
+}
+
+.input-wrap-multiple.input-wrap-2_3 > * {
+  width: 33.3333333333%;
+}
+
+.input-wrap-multiple.input-wrap-2_3 > *:first-child {
+  width: 66.6666666667%;
 }
 
 .toggle-wrap {
