--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -7850,6 +7850,33 @@ label[id^=iCheck] {
   display: block;
 }
 
+.label-flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.label-flex .TinyProgress {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.flex-grow {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
 .hero {
   display: -webkit-box;
   display: -webkit-flex;
