--- a/applications/dashboard/scss/new-features/selectBox.scss
+++ b/applications/dashboard/scss/new-features/selectBox.scss
@@ -22,6 +22,10 @@
   margin-right: 5px;
 }
 
+.selectBox-main {
+  position: static;
+}
+
 .selectBox-content {
   display: inline-flex;
   position: relative;
@@ -53,32 +57,32 @@
 
 
 
+
+
 .selectBox-items {
+  display: block;
+  position: relative;
   list-style: none;
   margin: 0;
-  position: relative;
-  display: block;
-  padding: 6px 0;
 }
+
 
 .selectBox-item {
   position: relative;
+  display: block;
 }
 
-.selectbox-link {
+
+
+.selectBox-link {
+  display: block;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow-x: hidden;
-  max-width: 100%;
-  transition-property: background;
-  transition-duration: .15s;
-  transition-timing-function: ease-out;
-  min-width: 150px;
-  text-decoration: none!important;
+  overflow: hidden;
+  width: 100%;
+  text-decoration: none !important;
   text-align: left;
-  line-height: 33px;
-  padding: 2px 14px 0 38px;
-  outline: 0;
+
 }
 
 
