--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -1,3 +1,4 @@
 // A style sheet for compatibility with new features.
 // This should always be added after style.css and not be overridden.
+@import "new-features/vanillaIcon";
 @import "new-features/selectBox";
