Added styles for category filtering

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -26,20 +26,22 @@
 }
 
 .selectBox-main {
-  position: static;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  height: 100%;
 }
 
 .selectBox-content {
-  display: inline-flex;
-  position: relative;
-  align-items: center;
-  justify-content: flex-start;
-  flex-wrap: nowrap;
+  left: 100%;
+  margin-left: -29px;
+  margin-top: 10px;
 }
 
 .selectBox-toggle {
   position: relative;
-  display: inline-block;
+  display: block;
   line-height: 1;
   vertical-align: middle;
   cursor: pointer;
@@ -70,14 +72,35 @@
   display: block;
 }
 
+.selectBox-item .dropdown-menu-link.selectBox-link {
+  position: relative;
+  padding-left: 30px;
+}
+
+.selectBox-item.isActive .selectBox-link {
+  pointer-events: none;
+  cursor: default;
+}
+
 .selectBox-link {
   display: block;
+  box-sizing: border-box;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   width: 100%;
   text-decoration: none !important;
   text-align: left;
+}
+
+.selectBox-selectedIcon {
+  position: absolute;
+  left: 5px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  width: 18px;
+  height: 18px;
 }
 
 #Content .BoxNewDiscussion {
