--- a/applications/dashboard/scss/new-features/followButton.scss
+++ b/applications/dashboard/scss/new-features/followButton.scss
@@ -5,6 +5,11 @@
   vertical-align: middle;
   font-weight: 400;
   padding: 0 5px;
+  text-decoration: none;
+
+  &.isFollowing:not(:hover) {
+    opacity: 0.7;
+  }
 }
 
 .followButton-icon {
