--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -1,2 +1,98 @@
+.richEditor {
+  position: relative;
+  display: block;
+  padding-left: 36px;
+}
+
+.richEditor-frame.InputBox {
+  background: white;
+  height: auto;
+  padding: 0;
+}
+
+.richEditor-menu {
+  display: inline-block;
+  position: relative;
+}
+
+.richEditorParagraphMenu {
+  position: absolute;
+  top: 9px;
+  left: 6px;
+  height: 24px;
+  width: 24px;
+}
+
+.richEditor-text {
+  position: relative;
+  min-height: 200px;
+  padding: 9px 12px 0;
+}
+
+.richEditor-text:focus {
+  outline-offset: -2px;
+  outline-style: auto;
+  outline-width: 5px;
+  outline-color: Highlight;
+  outline-color: -webkit-focus-ring-color;
+  z-index: 1;
+}
+
+.richEditor-menuItems {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.richEditor-menuItem {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.richEditor-menuItem .richEditor-button {
+  height: 39px;
+  width: 39px;
+}
+
+.richEditor-menuItem.isRightAligned {
+  margin-left: auto;
+}
+
+.richEditor-button {
+  display: block;
+  position: relative;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: 0;
+  padding: 0;
+  height: 24px;
+  width: 24px;
+}
+
+.richEditor-button:not(:disabled) {
+  cursor: pointer;
+}
+
+.richEditor-button:focus {
+  z-index: 1;
+}
+
+.richEditorEmbedMenu {
+  padding: 0;
+}
+
+.richEditorInline-icon {
+  display: block;
+  margin: auto;
+  height: 24px;
+  width: 24px;
+}
 
 /*# sourceMappingURL=style-compat.css.map */
