--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -182,11 +182,13 @@
   top: auto;
   right: auto;
   text-align: center;
+  user-select: none;
 }
 
 .richEditorInsertLinkMenu-input.InputBox {
   border: 0 !important;
   flex-grow: 1;
+  max-width: calc(100% - 39px);
 }
 
 /*# sourceMappingURL=style-compat.css.map */
