--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -1,5 +1,10 @@
-// A style sheet for compatibility with new features.
+// A style sheet for compatibility with new features and fixes.
 // This should always be added after style.css and not be overridden.
+
+// Fixes
+@import "compat-fixes/image-cropper";
+
+// Features
 @import "new-features/followButton";
 @import "new-features/vanillaIcon";
 @import "new-features/selectBox";
