--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -2488,6 +2488,17 @@ dl.About dd {
   display: block
 }
 
+/* ======================================================== Image Cropper */
+body.isMobile {
+    .box-crop .box-source {
+        display: none;
+    }
+
+    .change-picture .thumbnail-message {
+        display: none;
+    }
+}
+
 /* ======================================================== Thumbnail Cropper */
 .Popup .CurrentPicture {
   display: none;
