--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -2494,7 +2494,7 @@ body.isMobile {
         display: none;
     }
 
-    .change-picture .thumbnail-message {
+    .change-picture .change-picture-instructions {
         display: none;
     }
 }
