--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -82,6 +82,7 @@ em {
   list-style: none;
   margin: 0;
   padding: 0;
+  z-index: 1;
 }
 
 .richEditor-menuItem {
@@ -301,11 +302,51 @@ em {
   display: none;
 }
 
-.richEditor-inlineNub {
+.richEditor-nubPosition {
   position: absolute;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 1;
   width: 24px;
   height: 24px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  transform: translateX(-50%);
+  margin-top: -1px;
+}
+
+.richEditor-nub {
+  position: relative;
+  display: block;
+  width: 12px;
+  height: 12px;
+  transform: translateY(-50%) rotate(45deg);
+  border: 1px solid #999;
+  box-shadow: 0 0 5px 1px #eee;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
   background: white;
+}
+
+.richEditor-inlineMenu.isUp {
+  transform: translateY(-14.4px);
+}
+
+.richEditor-inlineMenu.isDown {
+  transform: translateY(14.4px);
+}
+
+.richEditor-inlineMenu.isDown .richEditor-nubPosition {
+  align-items: flex-end;
+  transform: translateY(-50%) translateX(-50%);
+  margin-top: 1px;
+}
+
+.richEditor-inlineMenu.isDown .richEditor-nub {
+  transform: translateY(50%) rotate(45deg);
 }
 
 .followButton {
