--- a/applications/dashboard/scss/new-features/richEditor.scss
+++ b/applications/dashboard/scss/new-features/richEditor.scss
@@ -19,7 +19,7 @@ $richEditor-insertPopover_maxHeight: 250px !default;
 $richEditor-emoji_width: 7 * $richEditor-menuButton_size + 2 * $richEditor-insertPopover_paddingHorizontal;
 $richEditor-nub_width: 12px !default;
 $richEditor-menu_borderWidth: 1px !default;
-$richEditor-menu_offset: $richEditor-nub_width * 1.2;
+$richEditor-menu_offset: $richEditor-nub_width !default;
 
 .richEditor {
   position: relative;
@@ -90,7 +90,6 @@ $richEditor-menu_offset: $richEditor-nub_width * 1.2;
   list-style: none;
   margin: 0;
   padding: 0;
-  z-index: 2;
 }
 
 .richEditor-menuItem {
@@ -133,7 +132,7 @@ $richEditor-menu_offset: $richEditor-nub_width * 1.2;
   }
 
   &:focus {
-    z-index: 1;
+    z-index: 2;
   }
 
   &:hover,
@@ -343,7 +342,6 @@ $richEditor-menu_offset: $richEditor-nub_width * 1.2;
   align-items: flex-start;
   justify-content: center;
   overflow: hidden;
-  z-index: 1;
   width: $richEditor-nub_width * 2;
   height: $richEditor-nub_width * 2;
   -webkit-user-select: none;
@@ -359,8 +357,10 @@ $richEditor-menu_offset: $richEditor-nub_width * 1.2;
   display: block;
   width: $richEditor-nub_width;
   height: $richEditor-nub_width;
-  transform: translateY(-50%) rotate(45deg);
-  border: $richEditor-menu_borderWidth solid #999;
+  border: {
+    top: $richEditor-menu_borderWidth solid #999;
+    right: $richEditor-menu_borderWidth solid #999;
+  }
   box-shadow: 0 0 5px 1px #eee;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
   background: $richEditor-bg_color;
@@ -371,6 +371,10 @@ $richEditor-menu_offset: $richEditor-nub_width * 1.2;
 .richEditor-inlineMenu {
   &.isUp {
     transform: translateY(-$richEditor-menu_offset);
+
+    .richEditor-nub {
+      transform: translateY(-50%) rotate(135deg);
+    }
   }
 
   &.isDown {
@@ -382,7 +386,7 @@ $richEditor-menu_offset: $richEditor-nub_width * 1.2;
       margin-top: $richEditor-menu_borderWidth;
     }
     .richEditor-nub {
-      transform: translateY(50%) rotate(45deg);
+      transform: translateY(50%) rotate(-45deg);
     }
   }
 }
