Fix broken pasting with emoji blot

--- a/applications/dashboard/scss/new-features/richEditor.scss
+++ b/applications/dashboard/scss/new-features/richEditor.scss
@@ -78,7 +78,7 @@ $richEditor-menu_offset: $richEditor-nub_width !default;
 }
 
 .ql-clipboard {
-    display: none;
+    @include sr-only();
 }
 
 .richEditor-menuItems {
